# dalia

./: .gitignore  404.html  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  index.html  mkdocs.yml
.github/workflows/: docs.yml
Audio Engine/: Audio Engine.slnx
Audio Engine/Audio Engine/: Audio Engine.vcxproj  Audio Engine.vcxproj.filters
Audio Engine/Demo Application/: Demo Application.vcxproj  Demo Application.vcxproj.filters
api/EffectControl_8h/: index.html
api/EffectControl_8h_source/: index.html
api/Engine_8h/: index.html
api/Engine_8h_source/: index.html
api/LogLevel_8h/: index.html
api/LogLevel_8h_source/: index.html
api/PlaybackControl_8h/: index.html
api/PlaybackControl_8h_source/: index.html
api/Result_8h/: index.html
api/Result_8h_source/: index.html
api/SoundControl_8h/: index.html
api/SoundControl_8h_source/: index.html
api/annotated/: index.html
api/class_member_enums/: index.html
api/class_member_functions/: index.html
api/class_member_typedefs/: index.html
api/class_member_variables/: index.html
api/class_members/: index.html
api/classdalia_1_1Engine/: index.html
api/classes/: index.html
api/dir_0ee167d633b723baeec4094afeaf5d43/: index.html
api/dir_283be189f6de867d90b5075907410367/: index.html
api/dir_996f45160da62e1a3d7f6046fad68f51/: index.html
api/dir_bafa501d493553e442f19f5f8dd7b29c/: index.html
api/dir_dd0695510186d7664f10ce319a65443f/: index.html
api/files/: index.html
api/functions/: index.html
api/hierarchy/: index.html
api/links/: index.html
api/macros/: index.html
api/modules/: index.html
api/namespace_member_enums/: index.html
api/namespace_member_functions/: index.html
api/namespace_member_typedefs/: index.html
api/namespace_member_variables/: index.html
api/namespace_members/: index.html
api/namespacedalia/: index.html
api/namespaces/: index.html
api/pages/: index.html
api/structdalia_1_1BiquadParams/: index.html
api/structdalia_1_1EffectHandle/: index.html
api/structdalia_1_1EngineConfig/: index.html
api/structdalia_1_1Listener3DAttributes/: index.html
api/structdalia_1_1PlaybackHandle/: index.html
api/structdalia_1_1SoundHandle/: index.html
api/structdalia_1_1Vec3/: index.html
api/variables/: index.html
architecture/: index.html
assets/.doxy/api/api/: classes.md  (+39 more)
common/: CMakeLists.txt
common/src/: Soundbank.h  SoundbankWriter.cpp  StringID.h  Temp.cpp
demo/: CMakeLists.txt
demo/src/: BiquadEffect.cpp  BiquadEffect.h  DrawHelper.cpp  DrawHelper.h  Effect.h  Listener.cpp  Listener.h  MixingBus.cpp  MixingBus.h  Movement.h  Panel.h  PlaybackInstance.cpp  PlaybackInstance.h  Sandbox.cpp  Sandbox.h  SoundAsset.cpp  SoundAsset.h  UI.h  main.cpp
docs/: architecture.md  getting-started.md  index.md
docs/guide/: asset-management.md  mixing.md  playback-control.md  spatialization.md
docs/stylesheets/: extra.css
engine/: CMakeLists.txt
engine/include/: dalia.h
engine/include/dalia/: AudioEngine.h  AudioHandle.h  Result.h
engine/include/dalia/Core/: LogLevel.h
engine/include/dalia/audio/: AudioControl.h  AudioEngine.h  EffectControl.h  Engine.h  PlaybackControl.h  ResourceHandle.h  SoundControl.h  SoundHandle.h
engine/include/dalia/core/: LogLevel.h  Result.h
engine/src/: AudioCommandQueue.cpp  AudioCommandQueue.h  AudioEngine.cpp  AudioEventQueue.h  Bus.h  CommandQueue.cpp  CommandQueue.h  Engine.cpp  EventQueue.cpp  EventQueue.h  IoRequestQueue.cpp  IoRequestQueue.h  Logger.cpp  Logger.h  MPSCRingBuffer.h  StreamingContext.h  Voice.h
engine/src/backend/: IAudioBackend.h  WasapiBackend.cpp  WasapiBackend.h
engine/src/core/: AsyncPool.h  Constants.h  FixedStack.h  HandleManager.cpp  HandleManager.h  HandlePool.h  Logger.cpp  Logger.h  Math.h  ParameterBridge.h  ResourcePool.h  SPSCRingBuffer.h  StateSyncPool.h  States.h  Types.h  Utility.cpp  Utility.h
engine/src/dsp/: Slew.cpp  Slew.h
engine/src/io/: IoLoadSystem.cpp  IoLoadSystem.h  IoStreamSystem.cpp  IoStreamSystem.h  stb_vorbis_impl.cpp
engine/src/messaging/: AudioCommandQueue.cpp  AudioCommandQueue.h  AudioEventQueue.cpp  AudioEventQueue.h  IoLoadEventQueue.cpp  IoLoadEventQueue.h  IoLoadRequestQueue.cpp  IoLoadRequestQueue.h  IoRequestQueue.h  IoStreamRequestQueue.cpp  IoStreamRequestQueue.h  RtCommandQueue.cpp  RtCommandQueue.h  RtEventQueue.cpp  RtEventQueue.h
engine/src/mixer/: Bus.cpp  Bus.h  BusGraphCompiler.cpp  BusGraphCompiler.h  DspUtility.cpp  DspUtility.h  Listener.h  MixGraphCompiler.cpp  MixGraphCompiler.h  ParameterBridge.h  PeakLimiter.cpp  PeakLimiter.h  Resampler.cpp  Resampler.h  RtSystem.cpp  RtSystem.h  Speakers.h  StreamContext.h  StreamingContext.h  Voice.h
engine/src/mixer/effects/: Biquad.cpp  Biquad.h  BiquadFilter.cpp  BiquadFilter.h  Effect.h
engine/src/resources/: AssetRegistry.cpp  AssetRegistry.h  ResidentSound.h  StreamSound.h
engine/src/systems/: IoLoadSystem.cpp  IoLoadSystem.h  IoStreamSystem.cpp  IoStreamSystem.h  IoSystem.cpp  IoSystem.h  RealTimeSystem.cpp  RealTimeSystem.h  RtSystem.cpp  RtSystem.h
getting-started/: index.html
guide/asset-management/: index.html
guide/mixing/: index.html
guide/playback-control/: index.html
guide/spatialization/: index.html
sandbox/: CMakeLists.txt
sandbox/src/: BiquadEffect.cpp  BiquadEffect.h  DrawHelper.h  Effect.h  Listener.cpp  Listener.h  MixingBus.h  Movement.cpp  PlaybackInstance.cpp  PlaybackInstance.h  Sandbox.cpp  Sandbox.h  SoundAsset.cpp  SoundAsset.h  main.cpp
search/: search_index.json
studio/: CMakeLists.txt
studio/src/: FileExplorer.cpp  SoundbankWriter.cpp  SoundbankWriter.h  Transcoder.cpp  Transcoder.h  main.cpp
studio/src/app/: Application.cpp  Application.h
studio/src/commands/: Command.h  CommandStack.cpp  CommandStack.h  ModifyAssetCommand.h
studio/src/core/: Logger.cpp  Logger.h
studio/src/editor/: BrowserPanel.cpp  BrowserPanel.h  ConsolePanel.cpp  ConsolePanel.h  InspectorPanel.cpp  InspectorPanel.h  Panel.h  SelectionContext.h
studio/src/project/: Project.cpp  Project.h
studio/systems/: FileSystem.h
stylesheets/: extra.css
(+41 files in other folders)
